// Package handlers æä¾›HTTP APIå¤„ç†å™¨
//
// contract.go å®ç°æ™ºèƒ½åˆçº¦ç›¸å…³çš„HTTP APIç«¯ç‚¹
//
// ğŸ¯ **ç°ä»£åŒ–åˆçº¦APIæ¶æ„**
//
// æœ¬æ–‡ä»¶ä¸¥æ ¼æŒ‰ç…§ pkg/interfaces/blockchain ä¸­å®é™…å­˜åœ¨çš„æ¥å£å®ç°ï¼Œ
// æä¾›ç®€æ´ã€ç±»å‹å®‰å…¨çš„åˆçº¦ç®¡ç†APIã€‚

package handlers

import (
	"context"
	"encoding/hex"
	"fmt"
	"net/http"
	"time"

	"github.com/gin-gonic/gin"

	"github.com/weisyn/v1/pb/blockchain/block/transaction/resource"
	"github.com/weisyn/v1/pkg/interfaces/blockchain"
	"github.com/weisyn/v1/pkg/interfaces/infrastructure/log"
	"github.com/weisyn/v1/pkg/types"
)

// ==================== ğŸ¯ è¯·æ±‚å“åº”ç»“æ„å®šä¹‰ ====================

// DeployContractRequest éƒ¨ç½²åˆçº¦è¯·æ±‚
type DeployContractRequest struct {
	DeployerPrivateKey string                            `json:"deployer_private_key" binding:"required"`
	ContractFilePath   string                            `json:"contract_file_path" binding:"required"`
	Config             *resource.ContractExecutionConfig `json:"config" binding:"required"`
	Name               string                            `json:"name" binding:"required"`
	Description        string                            `json:"description,omitempty"`
	Options            *types.ResourceDeployOptions      `json:"options,omitempty"`
}

// CallContractRequest è°ƒç”¨åˆçº¦è¯·æ±‚
type CallContractRequest struct {
	CallerPrivateKey  string                 `json:"caller_private_key" binding:"required"`
	ContractAddress   string                 `json:"contract_address" binding:"required"`
	MethodName        string                 `json:"method_name" binding:"required"`
	Parameters        map[string]interface{} `json:"parameters,omitempty"`
	ExecutionFeeLimit uint64                 `json:"execution_fee_limit" binding:"required"`
	Value             string                 `json:"value,omitempty"`
	Options           *types.TransferOptions `json:"options,omitempty"`
}

// ContractResponse åˆçº¦å“åº”
type ContractResponse struct {
	Success         bool   `json:"success"`
	TransactionHash string `json:"transaction_hash"`
	Message         string `json:"message"`
}

// DeployStaticResourceRequest éƒ¨ç½²é™æ€èµ„æºè¯·æ±‚
type DeployStaticResourceRequest struct {
	DeployerPrivateKey string                       `json:"deployer_private_key" binding:"required"`
	FilePath           string                       `json:"file_path" binding:"required"`
	Name               string                       `json:"name" binding:"required"`
	Description        string                       `json:"description,omitempty"`
	Tags               []string                     `json:"tags,omitempty"`
	Options            *types.ResourceDeployOptions `json:"options,omitempty"`
}

// DeployAIModelRequest éƒ¨ç½²AIæ¨¡å‹è¯·æ±‚
type DeployAIModelRequest struct {
	DeployerPrivateKey string                           `json:"deployer_private_key" binding:"required"`
	ModelFilePath      string                           `json:"model_file_path" binding:"required"`
	Config             *resource.AIModelExecutionConfig `json:"config" binding:"required"`
	Name               string                           `json:"name" binding:"required"`
	Description        string                           `json:"description,omitempty"`
	Options            *types.ResourceDeployOptions     `json:"options,omitempty"`
}

// InferAIModelRequest AIæ¨¡å‹æ¨ç†è¯·æ±‚
type InferAIModelRequest struct {
	CallerPrivateKey string                 `json:"caller_private_key" binding:"required"`
	ModelAddress     string                 `json:"model_address" binding:"required"`
	InputData        interface{}            `json:"input_data" binding:"required"`
	Parameters       map[string]interface{} `json:"parameters,omitempty"`
	Options          *types.TransferOptions `json:"options,omitempty"`
}

// ==================== ğŸ—ï¸ åˆçº¦APIå¤„ç†å™¨ ====================

// ContractHandler æ™ºèƒ½åˆçº¦HTTPå¤„ç†å™¨
type ContractHandler struct {
	contractService    blockchain.ContractService
	transactionService blockchain.TransactionService
	transactionManager blockchain.TransactionManager
	aiModelService     blockchain.AIModelService
	logger             log.Logger
}

// NewContractHandler åˆ›å»ºåˆçº¦å¤„ç†å™¨å®ä¾‹
func NewContractHandler(
	contractService blockchain.ContractService,
	transactionService blockchain.TransactionService,
	transactionManager blockchain.TransactionManager,
	aiModelService blockchain.AIModelService,
	logger log.Logger,
) *ContractHandler {
	return &ContractHandler{
		contractService:    contractService,
		transactionService: transactionService,
		transactionManager: transactionManager,
		aiModelService:     aiModelService,
		logger:             logger,
	}
}

// ==================== ğŸ¯ æ ¸å¿ƒAPIæ–¹æ³•å®ç° ====================

// DeployContract éƒ¨ç½²æ™ºèƒ½åˆçº¦
//
// ğŸ“Œ **æ¥å£è¯´æ˜**ï¼šéƒ¨ç½²WASMæ™ºèƒ½åˆçº¦åˆ°åŒºå—é“¾ç½‘ç»œ
//
// **HTTP Method**: `POST`
// **URL Path**: `/contracts/deploy`
//
// **è¯·æ±‚ä½“å‚æ•°**ï¼š
//   - deployer_private_key (string, required): éƒ¨ç½²è€…ç§é’¥ï¼Œåå…­è¿›åˆ¶æ ¼å¼
//   - contract_file_path (string, required): åˆçº¦WASMæ–‡ä»¶è·¯å¾„
//   - config (object, required): åˆçº¦æ‰§è¡Œé…ç½®
//   - name (string, required): åˆçº¦æ˜¾ç¤ºåç§°
//   - description (string, optional): åˆçº¦åŠŸèƒ½æè¿°
//   - options (object, optional): é«˜çº§éƒ¨ç½²é€‰é¡¹
//
// **è¯·æ±‚ä½“ç¤ºä¾‹**ï¼š
//
//	{
//	  "deployer_private_key": "1234567890abcdef...",
//	  "contract_file_path": "/path/to/contract.wasm",
//	  "config": {
//	    "max_æ‰§è¡Œè´¹ç”¨_limit": 1000000,
//	    "max_memory_pages": 256,
//	    "timeout": 30
//	  },
//	  "name": "å»ä¸­å¿ƒåŒ–æŠ•ç¥¨ç³»ç»Ÿ",
//	  "description": "åŸºäºåŒºå—é“¾çš„é€æ˜æŠ•ç¥¨åˆçº¦"
//	}
//
// âœ… **æˆåŠŸå“åº”ç¤ºä¾‹**ï¼š
//
//	{
//	  "success": true,
//	  "transaction_hash": "a1b2c3d4e5f6789012345678901234567890abcdef",
//	  "message": "åˆçº¦éƒ¨ç½²äº¤æ˜“å·²æˆåŠŸåˆ›å»º"
//	}
//
// âŒ **é”™è¯¯å“åº”ç¤ºä¾‹**ï¼š
//
//	{
//	  "success": false,
//	  "message": "åˆçº¦éƒ¨ç½²æœåŠ¡æš‚æ—¶ä¸å¯ç”¨"
//	}
//
// ğŸ’¡ **ä½¿ç”¨è¯´æ˜**ï¼š
// - æ”¯æŒåŸºç¡€æ¨¡å¼ï¼ˆå…¬å¼€åˆçº¦ï¼‰å’Œé«˜çº§æ¨¡å¼ï¼ˆç§æœ‰åˆçº¦ã€ä»˜è´¹åˆçº¦ï¼‰
// - è¿”å›çš„transaction_hashéœ€è¦ç­¾åå’Œæäº¤æ‰èƒ½å®Œæˆéƒ¨ç½²
// - éƒ¨ç½²æˆåŠŸåå¯é€šè¿‡CallContractè°ƒç”¨åˆçº¦æ–¹æ³•
func (h *ContractHandler) DeployContract(c *gin.Context) {
	h.logger.Info("å¼€å§‹å¤„ç†åˆçº¦éƒ¨ç½²è¯·æ±‚")

	var req DeployContractRequest
	if err := c.ShouldBindJSON(&req); err != nil {
		h.logger.Errorf("è§£æåˆçº¦éƒ¨ç½²å‚æ•°å¤±è´¥: %v", err)
		c.JSON(http.StatusBadRequest, ContractResponse{
			Success: false,
			Message: fmt.Sprintf("å‚æ•°æ ¼å¼é”™è¯¯: %v", err),
		})
		return
	}

	// è§£æç§é’¥
	privateKey, err := hex.DecodeString(req.DeployerPrivateKey)
	if err != nil {
		h.logger.Errorf("ç§é’¥æ ¼å¼é”™è¯¯: %v", err)
		c.JSON(http.StatusBadRequest, ContractResponse{
			Success: false,
			Message: "ç§é’¥æ ¼å¼é”™è¯¯ï¼Œè¯·ä½¿ç”¨åå…­è¿›åˆ¶æ ¼å¼",
		})
		return
	}

	// æ£€æŸ¥åˆçº¦æœåŠ¡æ˜¯å¦å¯ç”¨
	if h.contractService == nil {
		h.logger.Error("ContractService æœåŠ¡ä¸å¯ç”¨")
		c.JSON(http.StatusServiceUnavailable, ContractResponse{
			Success: false,
			Message: "åˆçº¦éƒ¨ç½²æœåŠ¡æš‚æ—¶ä¸å¯ç”¨",
		})
		return
	}

	// è°ƒç”¨åˆçº¦æœåŠ¡éƒ¨ç½²åˆçº¦
	ctx, cancel := context.WithTimeout(c.Request.Context(), 60*time.Second)
	defer cancel()

	txHash, err := h.contractService.DeployContract(
		ctx,
		privateKey,
		req.ContractFilePath,
		req.Config,
		req.Name,
		req.Description,
		req.Options,
	)
	if err != nil {
		h.logger.Errorf("åˆçº¦éƒ¨ç½²å¤±è´¥: %v", err)
		c.JSON(http.StatusInternalServerError, ContractResponse{
			Success: false,
			Message: fmt.Sprintf("åˆçº¦éƒ¨ç½²å¤±è´¥: %v", err),
		})
		return
	}

	h.logger.Infof("åˆçº¦éƒ¨ç½²æˆåŠŸï¼Œäº¤æ˜“å“ˆå¸Œ: %x", txHash)
	c.JSON(http.StatusOK, ContractResponse{
		Success:         true,
		TransactionHash: hex.EncodeToString(txHash),
		Message:         "åˆçº¦éƒ¨ç½²äº¤æ˜“å·²æˆåŠŸåˆ›å»º",
	})
}

// CallContract è°ƒç”¨æ™ºèƒ½åˆçº¦
//
// ğŸ“Œ **æ¥å£è¯´æ˜**ï¼šè°ƒç”¨å·²éƒ¨ç½²çš„æ™ºèƒ½åˆçº¦æ–¹æ³•
//
// **HTTP Method**: `POST`
// **URL Path**: `/contracts/call`
//
// **è¯·æ±‚ä½“å‚æ•°**ï¼š
//   - caller_private_key (string, required): è°ƒç”¨è€…ç§é’¥ï¼Œåå…­è¿›åˆ¶æ ¼å¼
//   - contract_address (string, required): åˆçº¦åœ°å€
//   - method_name (string, required): è¦è°ƒç”¨çš„æ–¹æ³•å
//   - parameters (object, optional): æ–¹æ³•å‚æ•°ï¼ŒJSONæ ¼å¼
//   - æ‰§è¡Œè´¹ç”¨_limit (number, required): æ‰§è¡Œè´¹ç”¨é™åˆ¶
//   - value (string, optional): å‘é€çš„ä»£å¸æ•°é‡
//   - options (object, optional): é«˜çº§è°ƒç”¨é€‰é¡¹
//
// **è¯·æ±‚ä½“ç¤ºä¾‹**ï¼š
//
//	{
//	  "caller_private_key": "1234567890abcdef...",
//	  "contract_address": "0xabcdef123456789abcdef123456789abcdef123456",
//	  "method_name": "transfer",
//	  "parameters": {
//	    "to": "0x123...",
//	    "amount": "100"
//	  },
//	  "æ‰§è¡Œè´¹ç”¨_limit": 500000,
//	  "value": "0"
//	}
//
// âœ… **æˆåŠŸå“åº”ç¤ºä¾‹**ï¼š
//
//	{
//	  "success": true,
//	  "transaction_hash": "b2c3d4e5f6789012345678901234567890abcdef12",
//	  "message": "åˆçº¦è°ƒç”¨äº¤æ˜“å·²æˆåŠŸåˆ›å»º"
//	}
//
// âŒ **é”™è¯¯å“åº”ç¤ºä¾‹**ï¼š
//
//	{
//	  "success": false,
//	  "message": "åˆçº¦è°ƒç”¨æœåŠ¡æš‚æ—¶ä¸å¯ç”¨"
//	}
//
// ğŸ’¡ **ä½¿ç”¨è¯´æ˜**ï¼š
// - ç”¨äºæ‰§è¡Œåˆçº¦ä¸šåŠ¡é€»è¾‘ï¼šä»£å¸è½¬è´¦ã€æŠ•ç¥¨ã€æŸ¥è¯¢ç­‰
// - æ”¯æŒåŸºç¡€æ¨¡å¼å’Œä¼ä¸šçº§æ¨¡å¼ï¼ˆå§”æ‰˜ã€å¤šç­¾ã€å®šæ—¶è°ƒç”¨ï¼‰
// - è¿”å›çš„transaction_hashéœ€è¦ç­¾åå’Œæäº¤æ‰èƒ½æ‰§è¡Œ
func (h *ContractHandler) CallContract(c *gin.Context) {
	h.logger.Info("å¼€å§‹å¤„ç†åˆçº¦è°ƒç”¨è¯·æ±‚")

	var req CallContractRequest
	if err := c.ShouldBindJSON(&req); err != nil {
		h.logger.Errorf("è§£æåˆçº¦è°ƒç”¨å‚æ•°å¤±è´¥: %v", err)
		c.JSON(http.StatusBadRequest, ContractResponse{
			Success: false,
			Message: fmt.Sprintf("å‚æ•°æ ¼å¼é”™è¯¯: %v", err),
		})
		return
	}

	// è§£æç§é’¥
	privateKey, err := hex.DecodeString(req.CallerPrivateKey)
	if err != nil {
		h.logger.Errorf("ç§é’¥æ ¼å¼é”™è¯¯: %v", err)
		c.JSON(http.StatusBadRequest, ContractResponse{
			Success: false,
			Message: "ç§é’¥æ ¼å¼é”™è¯¯ï¼Œè¯·ä½¿ç”¨åå…­è¿›åˆ¶æ ¼å¼",
		})
		return
	}

	// æ£€æŸ¥åˆçº¦æœåŠ¡æ˜¯å¦å¯ç”¨
	if h.contractService == nil {
		h.logger.Error("ContractService æœåŠ¡ä¸å¯ç”¨")
		c.JSON(http.StatusServiceUnavailable, ContractResponse{
			Success: false,
			Message: "åˆçº¦è°ƒç”¨æœåŠ¡æš‚æ—¶ä¸å¯ç”¨",
		})
		return
	}

	// è°ƒç”¨åˆçº¦æœåŠ¡
	ctx, cancel := context.WithTimeout(c.Request.Context(), 60*time.Second)
	defer cancel()

	txHash, err := h.contractService.CallContract(
		ctx,
		privateKey,
		req.ContractAddress,
		req.MethodName,
		req.Parameters,
		req.ExecutionFeeLimit,
		req.Value,
		req.Options,
	)
	if err != nil {
		h.logger.Errorf("åˆçº¦è°ƒç”¨å¤±è´¥: %v", err)
		c.JSON(http.StatusInternalServerError, ContractResponse{
			Success: false,
			Message: fmt.Sprintf("åˆçº¦è°ƒç”¨å¤±è´¥: %v", err),
		})
		return
	}

	h.logger.Infof("åˆçº¦è°ƒç”¨æˆåŠŸï¼Œäº¤æ˜“å“ˆå¸Œ: %x", txHash)
	c.JSON(http.StatusOK, ContractResponse{
		Success:         true,
		TransactionHash: hex.EncodeToString(txHash),
		Message:         "åˆçº¦è°ƒç”¨äº¤æ˜“å·²æˆåŠŸåˆ›å»º",
	})
}

// DeployStaticResource éƒ¨ç½²é™æ€èµ„æº
//
// POST /resources/deploy
func (h *ContractHandler) DeployStaticResource(c *gin.Context) {
	h.logger.Info("å¼€å§‹å¤„ç†é™æ€èµ„æºéƒ¨ç½²è¯·æ±‚")

	var req DeployStaticResourceRequest
	if err := c.ShouldBindJSON(&req); err != nil {
		h.logger.Errorf("è§£æé™æ€èµ„æºéƒ¨ç½²å‚æ•°å¤±è´¥: %v", err)
		c.JSON(http.StatusBadRequest, ContractResponse{
			Success: false,
			Message: fmt.Sprintf("å‚æ•°æ ¼å¼é”™è¯¯: %v", err),
		})
		return
	}

	// è§£æç§é’¥
	privateKey, err := hex.DecodeString(req.DeployerPrivateKey)
	if err != nil {
		h.logger.Errorf("ç§é’¥æ ¼å¼é”™è¯¯: %v", err)
		c.JSON(http.StatusBadRequest, ContractResponse{
			Success: false,
			Message: "ç§é’¥æ ¼å¼é”™è¯¯ï¼Œè¯·ä½¿ç”¨åå…­è¿›åˆ¶æ ¼å¼",
		})
		return
	}

	// è°ƒç”¨äº¤æ˜“æœåŠ¡éƒ¨ç½²é™æ€èµ„æº
	ctx, cancel := context.WithTimeout(c.Request.Context(), 60*time.Second)
	defer cancel()

	txHash, err := h.transactionService.DeployStaticResource(
		ctx,
		privateKey,
		req.FilePath,
		req.Name,
		req.Description,
		req.Tags,
		req.Options,
	)
	if err != nil {
		h.logger.Errorf("é™æ€èµ„æºéƒ¨ç½²å¤±è´¥: %v", err)
		c.JSON(http.StatusInternalServerError, ContractResponse{
			Success: false,
			Message: fmt.Sprintf("é™æ€èµ„æºéƒ¨ç½²å¤±è´¥: %v", err),
		})
		return
	}

	h.logger.Infof("é™æ€èµ„æºéƒ¨ç½²æˆåŠŸï¼Œäº¤æ˜“å“ˆå¸Œ: %x", txHash)
	c.JSON(http.StatusOK, ContractResponse{
		Success:         true,
		TransactionHash: hex.EncodeToString(txHash),
		Message:         "é™æ€èµ„æºéƒ¨ç½²äº¤æ˜“å·²æˆåŠŸåˆ›å»º",
	})
}

// DeployAIModel éƒ¨ç½²AIæ¨¡å‹
//
// POST /ai/deploy
func (h *ContractHandler) DeployAIModel(c *gin.Context) {
	h.logger.Info("å¼€å§‹å¤„ç†AIæ¨¡å‹éƒ¨ç½²è¯·æ±‚")

	var req DeployAIModelRequest
	if err := c.ShouldBindJSON(&req); err != nil {
		h.logger.Errorf("è§£æAIæ¨¡å‹éƒ¨ç½²å‚æ•°å¤±è´¥: %v", err)
		c.JSON(http.StatusBadRequest, ContractResponse{
			Success: false,
			Message: fmt.Sprintf("å‚æ•°æ ¼å¼é”™è¯¯: %v", err),
		})
		return
	}

	// è§£æç§é’¥
	privateKey, err := hex.DecodeString(req.DeployerPrivateKey)
	if err != nil {
		h.logger.Errorf("ç§é’¥æ ¼å¼é”™è¯¯: %v", err)
		c.JSON(http.StatusBadRequest, ContractResponse{
			Success: false,
			Message: "ç§é’¥æ ¼å¼é”™è¯¯ï¼Œè¯·ä½¿ç”¨åå…­è¿›åˆ¶æ ¼å¼",
		})
		return
	}

	// æ£€æŸ¥AIæ¨¡å‹æœåŠ¡æ˜¯å¦å¯ç”¨
	if h.aiModelService == nil {
		h.logger.Error("AIModelService æœåŠ¡ä¸å¯ç”¨")
		c.JSON(http.StatusServiceUnavailable, ContractResponse{
			Success: false,
			Message: "AIæ¨¡å‹éƒ¨ç½²æœåŠ¡æš‚æ—¶ä¸å¯ç”¨",
		})
		return
	}

	// è°ƒç”¨AIæ¨¡å‹æœåŠ¡
	ctx, cancel := context.WithTimeout(c.Request.Context(), 120*time.Second) // AIæ¨¡å‹éƒ¨ç½²éœ€è¦æ›´é•¿æ—¶é—´
	defer cancel()

	txHash, err := h.aiModelService.DeployAIModel(
		ctx,
		privateKey,
		req.ModelFilePath,
		req.Config,
		req.Name,
		req.Description,
		req.Options,
	)
	if err != nil {
		h.logger.Errorf("AIæ¨¡å‹éƒ¨ç½²å¤±è´¥: %v", err)
		c.JSON(http.StatusInternalServerError, ContractResponse{
			Success: false,
			Message: fmt.Sprintf("AIæ¨¡å‹éƒ¨ç½²å¤±è´¥: %v", err),
		})
		return
	}

	h.logger.Infof("AIæ¨¡å‹éƒ¨ç½²æˆåŠŸï¼Œäº¤æ˜“å“ˆå¸Œ: %x", txHash)
	c.JSON(http.StatusOK, ContractResponse{
		Success:         true,
		TransactionHash: hex.EncodeToString(txHash),
		Message:         "AIæ¨¡å‹éƒ¨ç½²äº¤æ˜“å·²æˆåŠŸåˆ›å»º",
	})
}

// InferAIModel AIæ¨¡å‹æ¨ç†
//
// POST /ai/infer
func (h *ContractHandler) InferAIModel(c *gin.Context) {
	h.logger.Info("å¼€å§‹å¤„ç†AIæ¨¡å‹æ¨ç†è¯·æ±‚")

	var req InferAIModelRequest
	if err := c.ShouldBindJSON(&req); err != nil {
		h.logger.Errorf("è§£æAIæ¨¡å‹æ¨ç†å‚æ•°å¤±è´¥: %v", err)
		c.JSON(http.StatusBadRequest, ContractResponse{
			Success: false,
			Message: fmt.Sprintf("å‚æ•°æ ¼å¼é”™è¯¯: %v", err),
		})
		return
	}

	// è§£æç§é’¥
	privateKey, err := hex.DecodeString(req.CallerPrivateKey)
	if err != nil {
		h.logger.Errorf("ç§é’¥æ ¼å¼é”™è¯¯: %v", err)
		c.JSON(http.StatusBadRequest, ContractResponse{
			Success: false,
			Message: "ç§é’¥æ ¼å¼é”™è¯¯ï¼Œè¯·ä½¿ç”¨åå…­è¿›åˆ¶æ ¼å¼",
		})
		return
	}

	// æ£€æŸ¥AIæ¨¡å‹æœåŠ¡æ˜¯å¦å¯ç”¨
	if h.aiModelService == nil {
		h.logger.Error("AIModelService æœåŠ¡ä¸å¯ç”¨")
		c.JSON(http.StatusServiceUnavailable, ContractResponse{
			Success: false,
			Message: "AIæ¨¡å‹æ¨ç†æœåŠ¡æš‚æ—¶ä¸å¯ç”¨",
		})
		return
	}

	// è°ƒç”¨AIæ¨¡å‹æœåŠ¡
	ctx, cancel := context.WithTimeout(c.Request.Context(), 60*time.Second)
	defer cancel()

	txHash, err := h.aiModelService.InferAIModel(
		ctx,
		privateKey,
		req.ModelAddress,
		req.InputData,
		req.Parameters,
		req.Options,
	)
	if err != nil {
		h.logger.Errorf("AIæ¨¡å‹æ¨ç†å¤±è´¥: %v", err)
		c.JSON(http.StatusInternalServerError, ContractResponse{
			Success: false,
			Message: fmt.Sprintf("AIæ¨¡å‹æ¨ç†å¤±è´¥: %v", err),
		})
		return
	}

	h.logger.Infof("AIæ¨¡å‹æ¨ç†æˆåŠŸï¼Œäº¤æ˜“å“ˆå¸Œ: %x", txHash)
	c.JSON(http.StatusOK, ContractResponse{
		Success:         true,
		TransactionHash: hex.EncodeToString(txHash),
		Message:         "AIæ¨¡å‹æ¨ç†äº¤æ˜“å·²æˆåŠŸåˆ›å»º",
	})
}
