package hostabi

import (
	"encoding/json"
	"testing"

	"github.com/stretchr/testify/assert"
	"github.com/stretchr/testify/require"

	transaction "github.com/weisyn/v1/pb/blockchain/block/transaction"
	pb "github.com/weisyn/v1/pb/blockchain/block/transaction"
)

// ============================================================================
// host_build_transaction.go æµ‹è¯•
// ============================================================================
//
// ğŸ¯ **æµ‹è¯•ç›®çš„**ï¼šå‘ç° host_build_transaction çš„ç¼ºé™·å’ŒBUGï¼Œç‰¹åˆ«æ˜¯ç®€åŒ–å®ç°å’Œå ä½ä»£ç 
//
// âš ï¸ **å·²çŸ¥ç®€åŒ–å®ç°**ï¼š
//   - ç¬¬576è¡Œï¼šç®€åŒ–å®ç°ï¼šé€‰æ‹©ç¬¬ä¸€ä¸ªUTXOï¼ˆå®é™…åº”è¯¥æŒ‰é‡‘é¢é€‰æ‹©ï¼‰
//   - ç¬¬611è¡Œï¼šç®€åŒ–å®ç°ï¼šé€šè¿‡AddCustomOutputæ–¹æ³•æ·»åŠ 
//   - ç¬¬990è¡Œï¼šåˆçº¦ä»£å¸ï¼ˆç®€åŒ–å®ç°ï¼šä½¿ç”¨é»˜è®¤çš„ FungibleClassIdï¼‰
//   - ç¬¬1115è¡Œï¼šå¦‚æœæ²¡æœ‰æä¾›ï¼Œä½¿ç”¨é›¶å“ˆå¸Œï¼ˆå ä½ï¼‰
//
// ============================================================================

// TestParseDraftJSON_Success æµ‹è¯•æˆåŠŸè§£æDraft JSON
func TestParseDraftJSON_Success(t *testing.T) {
	draftJSON := `{
		"sign_mode": "defer_sign",
		"inputs": [{"tx_hash": "abc123", "output_index": 0}],
		"outputs": [{"type": "asset", "owner": "deadbeef", "amount": "100"}]
	}`
	draftJSONBytes := []byte(draftJSON)

	draft, err := ParseDraftJSON(draftJSONBytes)

	assert.NoError(t, err, "åº”è¯¥æˆåŠŸè§£æ")
	assert.NotNil(t, draft, "åº”è¯¥è¿”å›Draftå¯¹è±¡")
	assert.Equal(t, "defer_sign", draft.SignMode, "ç­¾åæ¨¡å¼åº”è¯¥æ­£ç¡®")
	assert.Len(t, draft.Inputs, 1, "åº”è¯¥æœ‰1ä¸ªè¾“å…¥")
	assert.Len(t, draft.Outputs, 1, "åº”è¯¥æœ‰1ä¸ªè¾“å‡º")
}

// TestParseDraftJSON_DefaultSignMode æµ‹è¯•é»˜è®¤ç­¾åæ¨¡å¼
func TestParseDraftJSON_DefaultSignMode(t *testing.T) {
	draftJSON := `{
		"inputs": [{"tx_hash": "abc123", "output_index": 0}]
	}`
	draftJSONBytes := []byte(draftJSON)

	draft, err := ParseDraftJSON(draftJSONBytes)

	assert.NoError(t, err, "åº”è¯¥æˆåŠŸè§£æ")
	assert.NotNil(t, draft, "åº”è¯¥è¿”å›Draftå¯¹è±¡")
	assert.Equal(t, "defer_sign", draft.SignMode, "åº”è¯¥ä½¿ç”¨é»˜è®¤ç­¾åæ¨¡å¼")
}

// TestParseDraftJSON_InvalidJSON æµ‹è¯•æ— æ•ˆJSON
func TestParseDraftJSON_InvalidJSON(t *testing.T) {
	invalidJSON := `{invalid json}`
	draftJSONBytes := []byte(invalidJSON)

	draft, err := ParseDraftJSON(draftJSONBytes)

	assert.Error(t, err, "åº”è¯¥è¿”å›é”™è¯¯")
	assert.Nil(t, draft, "Draftåº”è¯¥ä¸ºnil")
	assert.Contains(t, err.Error(), "è§£æ Draft JSON å¤±è´¥", "é”™è¯¯ä¿¡æ¯åº”è¯¥æ­£ç¡®")
}

// TestValidateDraftJSON_Success æµ‹è¯•æˆåŠŸéªŒè¯Draft JSON
func TestValidateDraftJSON_Success(t *testing.T) {
	draft := &DraftJSON{
		SignMode: "defer_sign",
		Inputs:   []InputSpec{{TxHash: "abc123", OutputIndex: 0}},
	}

	err := ValidateDraftJSON(draft)

	assert.NoError(t, err, "åº”è¯¥æˆåŠŸéªŒè¯")
}

// TestValidateDraftJSON_InvalidSignMode æµ‹è¯•æ— æ•ˆç­¾åæ¨¡å¼
func TestValidateDraftJSON_InvalidSignMode(t *testing.T) {
	draft := &DraftJSON{
		SignMode: "invalid_mode",
		Inputs:   []InputSpec{{TxHash: "abc123", OutputIndex: 0}},
	}

	err := ValidateDraftJSON(draft)

	assert.Error(t, err, "åº”è¯¥è¿”å›é”™è¯¯")
	assert.Contains(t, err.Error(), "æ— æ•ˆçš„ç­¾åæ¨¡å¼", "é”™è¯¯ä¿¡æ¯åº”è¯¥æ­£ç¡®")
}

// TestValidateDraftJSON_EmptyTransaction æµ‹è¯•ç©ºäº¤æ˜“
func TestValidateDraftJSON_EmptyTransaction(t *testing.T) {
	draft := &DraftJSON{
		SignMode: "defer_sign",
		// æ²¡æœ‰è¾“å…¥ã€è¾“å‡ºæˆ–æ„å›¾
	}

	err := ValidateDraftJSON(draft)

	assert.Error(t, err, "åº”è¯¥è¿”å›é”™è¯¯")
	assert.Contains(t, err.Error(), "äº¤æ˜“ä¸ºç©º", "é”™è¯¯ä¿¡æ¯åº”è¯¥æ­£ç¡®")
}

// TestValidateDraftJSON_ValidModes æµ‹è¯•æ‰€æœ‰æœ‰æ•ˆç­¾åæ¨¡å¼
func TestValidateDraftJSON_ValidModes(t *testing.T) {
	validModes := []string{"defer_sign", "delegated", "threshold", "paymaster"}

	for _, mode := range validModes {
		t.Run(mode, func(t *testing.T) {
			draft := &DraftJSON{
				SignMode: mode,
				Inputs:   []InputSpec{{TxHash: "abc123", OutputIndex: 0}},
			}

			err := ValidateDraftJSON(draft)

			assert.NoError(t, err, "æ¨¡å¼ %s åº”è¯¥æœ‰æ•ˆ", mode)
		})
	}
}

// TestEncodeTxReceipt_Success æµ‹è¯•æˆåŠŸç¼–ç TxReceipt
func TestEncodeTxReceipt_Success(t *testing.T) {
	receipt := &TxReceipt{
		Mode:           "unsigned",
		UnsignedTxHash: "abc123",
		SerializedTx:   "base64data",
	}

	data, err := EncodeTxReceipt(receipt)

	assert.NoError(t, err, "åº”è¯¥æˆåŠŸç¼–ç ")
	assert.NotNil(t, data, "åº”è¯¥è¿”å›æ•°æ®")
	
	// éªŒè¯å¯ä»¥è§£ç 
	var decoded TxReceipt
	err = json.Unmarshal(data, &decoded)
	assert.NoError(t, err, "åº”è¯¥å¯ä»¥è§£ç ")
	assert.Equal(t, receipt.Mode, decoded.Mode, "æ¨¡å¼åº”è¯¥ä¸€è‡´")
	assert.Equal(t, receipt.UnsignedTxHash, decoded.UnsignedTxHash, "å“ˆå¸Œåº”è¯¥ä¸€è‡´")
}

// TestEncodeTxReceipt_EmptyReceipt æµ‹è¯•ç©ºæ”¶æ®
func TestEncodeTxReceipt_EmptyReceipt(t *testing.T) {
	receipt := &TxReceipt{
		Mode: "error",
		Error: "test error",
	}

	data, err := EncodeTxReceipt(receipt)

	assert.NoError(t, err, "åº”è¯¥æˆåŠŸç¼–ç ")
	assert.NotNil(t, data, "åº”è¯¥è¿”å›æ•°æ®")
	
	// éªŒè¯å¯ä»¥è§£ç 
	var decoded TxReceipt
	err = json.Unmarshal(data, &decoded)
	assert.NoError(t, err, "åº”è¯¥å¯ä»¥è§£ç ")
	assert.Equal(t, receipt.Mode, decoded.Mode, "æ¨¡å¼åº”è¯¥ä¸€è‡´")
	assert.Equal(t, receipt.Error, decoded.Error, "é”™è¯¯ä¿¡æ¯åº”è¯¥ä¸€è‡´")
}

// TestDecodeHex_Success æµ‹è¯•æˆåŠŸè§£ç åå…­è¿›åˆ¶
func TestDecodeHex_Success(t *testing.T) {
	hexStr := "deadbeef"
	expected := []byte{0xde, 0xad, 0xbe, 0xef}

	result := decodeHex(hexStr)

	assert.Equal(t, expected, result, "è§£ç ç»“æœåº”è¯¥æ­£ç¡®")
}

// TestDecodeHex_EmptyString æµ‹è¯•ç©ºå­—ç¬¦ä¸²
func TestDecodeHex_EmptyString(t *testing.T) {
	result := decodeHex("")

	assert.Empty(t, result, "ç©ºå­—ç¬¦ä¸²åº”è¯¥è¿”å›ç©ºå­—èŠ‚æ•°ç»„")
}

// TestDecodeHex_InvalidHex æµ‹è¯•æ— æ•ˆåå…­è¿›åˆ¶ï¼ˆåº”è¯¥è¿”å›ç©ºæˆ–panicï¼‰
func TestDecodeHex_InvalidHex(t *testing.T) {
	// decodeHex ä½¿ç”¨ hex.DecodeStringï¼Œæ— æ•ˆè¾“å…¥ä¼šè¿”å›é”™è¯¯
	// ä½†å½“å‰å®ç°å¯èƒ½æ²¡æœ‰å¤„ç†é”™è¯¯ï¼Œéœ€è¦æ£€æŸ¥
	invalidHex := "invalid"
	
	// å¦‚æœå®ç°ä¸å¤„ç†é”™è¯¯ï¼Œå¯èƒ½ä¼španicæˆ–è¿”å›ç©º
	// è¿™é‡Œæµ‹è¯•å®é™…è¡Œä¸º
	result := decodeHex(invalidHex)
	
	// æ ¹æ®å®é™…å®ç°ï¼Œå¯èƒ½æ˜¯ç©ºæ•°ç»„æˆ–panic
	// å¦‚æœæ˜¯ç©ºæ•°ç»„ï¼Œè¯´æ˜å®ç°å¿½ç•¥äº†é”™è¯¯ï¼ˆè¿™æ˜¯æ½œåœ¨é—®é¢˜ï¼‰
	if len(result) == 0 {
		t.Logf("âš ï¸ è­¦å‘Šï¼šdecodeHex å¯¹æ— æ•ˆè¾“å…¥è¿”å›ç©ºæ•°ç»„ï¼Œå¯èƒ½æ©ç›–äº†é”™è¯¯")
	}
}

// TestEncodeHex_Success æµ‹è¯•æˆåŠŸç¼–ç åå…­è¿›åˆ¶
func TestEncodeHex_Success(t *testing.T) {
	data := []byte{0xde, 0xad, 0xbe, 0xef}
	expected := "deadbeef"

	result := encodeHex(data)

	assert.Equal(t, expected, result, "ç¼–ç ç»“æœåº”è¯¥æ­£ç¡®")
}

// TestEncodeHex_EmptyBytes æµ‹è¯•ç©ºå­—èŠ‚æ•°ç»„
func TestEncodeHex_EmptyBytes(t *testing.T) {
	result := encodeHex([]byte{})

	assert.Empty(t, result, "ç©ºå­—èŠ‚æ•°ç»„åº”è¯¥è¿”å›ç©ºå­—ç¬¦ä¸²")
}

// TestEncodeBase64_Success æµ‹è¯•æˆåŠŸç¼–ç Base64
func TestEncodeBase64_Success(t *testing.T) {
	data := []byte("hello world")
	expected := "aGVsbG8gd29ybGQ=" // base64ç¼–ç 

	result := encodeBase64(data)

	assert.Equal(t, expected, result, "ç¼–ç ç»“æœåº”è¯¥æ­£ç¡®")
}

// TestEncodeBase64_EmptyBytes æµ‹è¯•ç©ºå­—èŠ‚æ•°ç»„
func TestEncodeBase64_EmptyBytes(t *testing.T) {
	result := encodeBase64([]byte{})

	assert.Empty(t, result, "ç©ºå­—èŠ‚æ•°ç»„åº”è¯¥è¿”å›ç©ºå­—ç¬¦ä¸²")
}

// TestBuildTxOutputFromSpec_AssetOutput æµ‹è¯•æ„å»ºèµ„äº§è¾“å‡º
func TestBuildTxOutputFromSpec_AssetOutput(t *testing.T) {
	spec := &OutputSpec{
		Type:   "asset",
		Owner:  "deadbeefdeadbeefdeadbeefdeadbeefdeadbeef", // 40ä¸ªå­—ç¬¦ = 20å­—èŠ‚
		Amount: "1000",
		TokenID: "",
	}

	output, err := buildTxOutputFromSpec(spec, nil)

	assert.NoError(t, err, "åº”è¯¥æˆåŠŸæ„å»º")
	assert.NotNil(t, output, "åº”è¯¥è¿”å›è¾“å‡ºå¯¹è±¡")
	assert.NotNil(t, output.OutputContent, "åº”è¯¥æœ‰è¾“å‡ºå†…å®¹")
	
	// éªŒè¯æ˜¯èµ„äº§è¾“å‡º
	assetOutput, ok := output.OutputContent.(*pb.TxOutput_Asset)
	assert.True(t, ok, "åº”è¯¥æ˜¯èµ„äº§è¾“å‡º")
	assert.NotNil(t, assetOutput.Asset, "èµ„äº§è¾“å‡ºåº”è¯¥ä¸ä¸ºnil")
}

// TestBuildTxOutputFromSpec_InvalidOwnerLength æµ‹è¯•æ— æ•ˆæ‰€æœ‰è€…é•¿åº¦
func TestBuildTxOutputFromSpec_InvalidOwnerLength(t *testing.T) {
	spec := &OutputSpec{
		Type:   "asset",
		Owner:  "invalid", // é•¿åº¦ä¸è¶³
		Amount: "1000",
	}

	output, err := buildTxOutputFromSpec(spec, nil)

	assert.Error(t, err, "åº”è¯¥è¿”å›é”™è¯¯")
	assert.Nil(t, output, "è¾“å‡ºåº”è¯¥ä¸ºnil")
	assert.Contains(t, err.Error(), "owner åœ°å€å¿…é¡»æ˜¯ 20 å­—èŠ‚", "é”™è¯¯ä¿¡æ¯åº”è¯¥æ­£ç¡®")
}

// TestBuildTxOutputFromSpec_InvalidType æµ‹è¯•æ— æ•ˆè¾“å‡ºç±»å‹
func TestBuildTxOutputFromSpec_InvalidType(t *testing.T) {
	spec := &OutputSpec{
		Type:   "invalid_type",
		Owner:  "deadbeefdeadbeefdeadbeefdeadbeefdeadbeef",
		Amount: "1000",
	}

	output, err := buildTxOutputFromSpec(spec, nil)

	assert.Error(t, err, "åº”è¯¥è¿”å›é”™è¯¯")
	assert.Nil(t, output, "è¾“å‡ºåº”è¯¥ä¸ºnil")
	assert.Contains(t, err.Error(), "ä¸æ”¯æŒçš„è¾“å‡ºç±»å‹", "é”™è¯¯ä¿¡æ¯åº”è¯¥æ­£ç¡®")
}

// TestBuildAssetOutput_Success æµ‹è¯•æ„å»ºèµ„äº§è¾“å‡º
func TestBuildAssetOutput_Success(t *testing.T) {
	owner := decodeHex("deadbeefdeadbeefdeadbeefdeadbeefdeadbeef")
	spec := &OutputSpec{
		Amount: "1000",
		TokenID: "",
	}
	locks := []*transaction.LockingCondition{}

	output, err := buildAssetOutput(owner, spec, locks, nil)

	assert.NoError(t, err, "åº”è¯¥æˆåŠŸæ„å»º")
	assert.NotNil(t, output, "åº”è¯¥è¿”å›è¾“å‡ºå¯¹è±¡")
	assert.NotNil(t, output.OutputContent, "åº”è¯¥æœ‰è¾“å‡ºå†…å®¹")
	
	// éªŒè¯æ˜¯èµ„äº§è¾“å‡º
	assetOutput, ok := output.OutputContent.(*pb.TxOutput_Asset)
	assert.True(t, ok, "åº”è¯¥æ˜¯èµ„äº§è¾“å‡º")
	assert.NotNil(t, assetOutput.Asset, "èµ„äº§è¾“å‡ºåº”è¯¥ä¸ä¸ºnil")
}

// TestBuildAssetOutput_WithTokenID æµ‹è¯•å¸¦TokenIDçš„èµ„äº§è¾“å‡ºï¼ˆæ£€æŸ¥ç®€åŒ–å®ç°ï¼‰
func TestBuildAssetOutput_WithTokenID(t *testing.T) {
	owner := decodeHex("deadbeefdeadbeefdeadbeefdeadbeefdeadbeef")
	spec := &OutputSpec{
		Amount: "1000",
		TokenID: "deadbeefdeadbeefdeadbeefdeadbeefdeadbeef", // 40ä¸ªå­—ç¬¦ = 20å­—èŠ‚
	}
	locks := []*transaction.LockingCondition{}
	contractAddr := decodeHex("aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa")

	output, err := buildAssetOutput(owner, spec, locks, contractAddr)

	assert.NoError(t, err, "åº”è¯¥æˆåŠŸæ„å»º")
	assert.NotNil(t, output, "åº”è¯¥è¿”å›è¾“å‡ºå¯¹è±¡")
	
	// éªŒè¯æ˜¯åˆçº¦ä»£å¸è¾“å‡º
	assetOutput, ok := output.OutputContent.(*pb.TxOutput_Asset)
	assert.True(t, ok, "åº”è¯¥æ˜¯èµ„äº§è¾“å‡º")
	assert.NotNil(t, assetOutput.Asset, "èµ„äº§è¾“å‡ºåº”è¯¥ä¸ä¸ºnil")
	
	contractToken, ok := assetOutput.Asset.AssetContent.(*transaction.AssetOutput_ContractToken)
	require.True(t, ok, "åº”è¯¥æ˜¯åˆçº¦ä»£å¸è¾“å‡º")
	require.NotNil(t, contractToken.ContractToken)
	assert.Equal(t, contractAddr, contractToken.ContractToken.ContractAddress, "åˆçº¦åœ°å€åº”ä¸ä¼ å…¥çš„ä¸€è‡´")
	assert.Equal(t,
		decodeHex("deadbeefdeadbeefdeadbeefdeadbeefdeadbeef"),
		contractToken.ContractToken.TokenIdentifier.(*transaction.ContractTokenAsset_FungibleClassId).FungibleClassId,
		"TokenID åº”ä¸ spec ä¸­ä¸€è‡´",
	)

	require.Len(t, output.LockingConditions, 1, "åˆçº¦ä»£å¸è¾“å‡ºåº”åŒ…å« ContractLock")
	lock := output.LockingConditions[0].GetContractLock()
	require.NotNil(t, lock, "é”å®šæ¡ä»¶åº”ä¸º ContractLock")
	assert.Equal(t, contractAddr, lock.ContractAddress, "ContractLock ä¸­çš„åˆçº¦åœ°å€åº”åŒ¹é…")
}

// TestBuildResourceOutput_Success æµ‹è¯•æ„å»ºèµ„æºè¾“å‡º
func TestBuildResourceOutput_Success(t *testing.T) {
	owner := decodeHex("deadbeefdeadbeefdeadbeefdeadbeefdeadbeef")
	contentHashHex := "deadbeefdeadbeefdeadbeefdeadbeefdeadbeefdeadbeefdeadbeefdeadbeef" // 64ä¸ªå­—ç¬¦ = 32å­—èŠ‚
	metadataJSON := `{
		"content_hash": "` + contentHashHex + `",
		"category": "wasm",
		"mime_type": "application/wasm"
	}`
	spec := &OutputSpec{
		Metadata: json.RawMessage(metadataJSON),
	}
	locks := []*transaction.LockingCondition{}

	output, err := buildResourceOutput(owner, spec, locks)

	assert.NoError(t, err, "åº”è¯¥æˆåŠŸæ„å»º")
	assert.NotNil(t, output, "åº”è¯¥è¿”å›è¾“å‡ºå¯¹è±¡")
	assert.NotNil(t, output.OutputContent, "åº”è¯¥æœ‰è¾“å‡ºå†…å®¹")
	
	// éªŒè¯æ˜¯èµ„æºè¾“å‡º
	resourceOutput, ok := output.OutputContent.(*pb.TxOutput_Resource)
	assert.True(t, ok, "åº”è¯¥æ˜¯èµ„æºè¾“å‡º")
	assert.NotNil(t, resourceOutput.Resource, "èµ„æºè¾“å‡ºåº”è¯¥ä¸ä¸ºnil")
}

// TestBuildResourceOutput_MissingContentHash æµ‹è¯•ç¼ºå°‘å†…å®¹å“ˆå¸Œ
func TestBuildResourceOutput_MissingContentHash(t *testing.T) {
	owner := decodeHex("deadbeefdeadbeefdeadbeefdeadbeefdeadbeef")
	metadataJSON := `{
		"category": "wasm"
	}`
	spec := &OutputSpec{
		Metadata: json.RawMessage(metadataJSON),
	}
	locks := []*transaction.LockingCondition{}

	output, err := buildResourceOutput(owner, spec, locks)

	assert.Error(t, err, "åº”è¯¥è¿”å›é”™è¯¯")
	assert.Nil(t, output, "è¾“å‡ºåº”è¯¥ä¸ºnil")
	assert.Contains(t, err.Error(), "content_hash ä¸èƒ½ä¸ºç©º", "é”™è¯¯ä¿¡æ¯åº”è¯¥æ­£ç¡®")
}

// TestBuildResourceOutput_InvalidContentHashLength æµ‹è¯•æ— æ•ˆå†…å®¹å“ˆå¸Œé•¿åº¦
func TestBuildResourceOutput_InvalidContentHashLength(t *testing.T) {
	owner := decodeHex("deadbeefdeadbeefdeadbeefdeadbeefdeadbeef")
	metadataJSON := `{
		"content_hash": "deadbeef",
		"category": "wasm"
	}`
	spec := &OutputSpec{
		Metadata: json.RawMessage(metadataJSON),
	}
	locks := []*transaction.LockingCondition{}

	output, err := buildResourceOutput(owner, spec, locks)

	assert.Error(t, err, "åº”è¯¥è¿”å›é”™è¯¯")
	assert.Nil(t, output, "è¾“å‡ºåº”è¯¥ä¸ºnil")
	assert.Contains(t, err.Error(), "å¿…é¡»æ˜¯ 32 å­—èŠ‚", "é”™è¯¯ä¿¡æ¯åº”è¯¥æ­£ç¡®")
}

// TestBuildResourceOutput_InvalidCategory æµ‹è¯•æ— æ•ˆèµ„æºç±»åˆ«
func TestBuildResourceOutput_InvalidCategory(t *testing.T) {
	owner := decodeHex("deadbeefdeadbeefdeadbeefdeadbeefdeadbeef")
	contentHashHex := "deadbeefdeadbeefdeadbeefdeadbeefdeadbeefdeadbeefdeadbeefdeadbeef"
	metadataJSON := `{
		"content_hash": "` + contentHashHex + `",
		"category": "invalid_category"
	}`
	spec := &OutputSpec{
		Metadata: json.RawMessage(metadataJSON),
	}
	locks := []*transaction.LockingCondition{}

	output, err := buildResourceOutput(owner, spec, locks)

	assert.Error(t, err, "åº”è¯¥è¿”å›é”™è¯¯")
	assert.Nil(t, output, "è¾“å‡ºåº”è¯¥ä¸ºnil")
	assert.Contains(t, err.Error(), "ä¸æ”¯æŒçš„èµ„æºç±»åˆ«", "é”™è¯¯ä¿¡æ¯åº”è¯¥æ­£ç¡®")
}

// TestParseAmount_Success æµ‹è¯•æˆåŠŸè§£æé‡‘é¢
func TestParseAmount_Success(t *testing.T) {
	amountStr := "1000"
	
	result, err := parseAmount(amountStr)

	assert.NoError(t, err, "åº”è¯¥æˆåŠŸè§£æ")
	assert.Equal(t, uint64(1000), result, "é‡‘é¢åº”è¯¥æ­£ç¡®")
}

// TestParseAmount_Zero æµ‹è¯•é›¶é‡‘é¢
func TestParseAmount_Zero(t *testing.T) {
	amountStr := "0"
	
	result, err := parseAmount(amountStr)

	assert.NoError(t, err, "åº”è¯¥æˆåŠŸè§£æ")
	assert.Equal(t, uint64(0), result, "é‡‘é¢åº”è¯¥ä¸º0")
}

// TestParseAmount_InvalidFormat æµ‹è¯•æ— æ•ˆæ ¼å¼
func TestParseAmount_InvalidFormat(t *testing.T) {
	amountStr := "invalid"
	
	result, err := parseAmount(amountStr)

	assert.Error(t, err, "åº”è¯¥è¿”å›é”™è¯¯")
	assert.Equal(t, uint64(0), result, "é”™è¯¯æ—¶åº”è¯¥è¿”å›0")
	assert.Contains(t, err.Error(), "é‡‘é¢æ ¼å¼æ— æ•ˆ", "é”™è¯¯ä¿¡æ¯åº”è¯¥æ­£ç¡®")
}

// TestParseAmount_EmptyString æµ‹è¯•ç©ºå­—ç¬¦ä¸²ï¼ˆå¯èƒ½è¿”å›0è€Œä¸æ˜¯é”™è¯¯ï¼‰
func TestParseAmount_EmptyString(t *testing.T) {
	amountStr := ""
	
	result, err := parseAmount(amountStr)

	// æ ¹æ®å®é™…å®ç°ï¼Œç©ºå­—ç¬¦ä¸²å¯èƒ½è¿”å›0è€Œä¸æ˜¯é”™è¯¯
	if err != nil {
		assert.Error(t, err, "å¦‚æœè¿”å›é”™è¯¯ï¼Œåº”è¯¥åŒ…å«é”™è¯¯ä¿¡æ¯")
	} else {
		assert.Equal(t, uint64(0), result, "ç©ºå­—ç¬¦ä¸²å¯èƒ½è¿”å›0")
		t.Logf("âš ï¸ æ³¨æ„ï¼šparseAmount å¯¹ç©ºå­—ç¬¦ä¸²è¿”å›0è€Œä¸æ˜¯é”™è¯¯ï¼Œè¿™å¯èƒ½æ©ç›–äº†é—®é¢˜")
	}
}

// TestBuildStateOutput_Success æµ‹è¯•æ„å»ºçŠ¶æ€è¾“å‡º
func TestBuildStateOutput_Success(t *testing.T) {
	owner := decodeHex("deadbeefdeadbeefdeadbeefdeadbeefdeadbeef")
	executionResultHashHex := "deadbeefdeadbeefdeadbeefdeadbeefdeadbeefdeadbeefdeadbeefdeadbeef" // 64ä¸ªå­—ç¬¦ = 32å­—èŠ‚
	stateIDHex := "deadbeefdeadbeefdeadbeefdeadbeefdeadbeef" // 40ä¸ªå­—ç¬¦ = 20å­—èŠ‚
	metadataJSON := `{
		"state_id": "` + stateIDHex + `",
		"state_version": 1,
		"execution_result_hash": "` + executionResultHashHex + `",
		"public_inputs": "deadbeefdeadbeefdeadbeefdeadbeefdeadbeefdeadbeefdeadbeefdeadbeef",
		"parent_state_hash": "` + executionResultHashHex + `"
	}`
	spec := &OutputSpec{
		Metadata: json.RawMessage(metadataJSON),
	}
	locks := []*transaction.LockingCondition{}

	output, err := buildStateOutput(owner, spec, locks)

	assert.NoError(t, err, "åº”è¯¥æˆåŠŸæ„å»º")
	assert.NotNil(t, output, "åº”è¯¥è¿”å›è¾“å‡ºå¯¹è±¡")
	assert.NotNil(t, output.OutputContent, "åº”è¯¥æœ‰è¾“å‡ºå†…å®¹")
	
	// éªŒè¯æ˜¯çŠ¶æ€è¾“å‡º
	stateOutput, ok := output.OutputContent.(*pb.TxOutput_State)
	assert.True(t, ok, "åº”è¯¥æ˜¯çŠ¶æ€è¾“å‡º")
	assert.NotNil(t, stateOutput.State, "çŠ¶æ€è¾“å‡ºåº”è¯¥ä¸ä¸ºnil")
}

// TestBuildStateOutput_MissingStateID æµ‹è¯•ç¼ºå°‘StateID
func TestBuildStateOutput_MissingStateID(t *testing.T) {
	owner := decodeHex("deadbeefdeadbeefdeadbeefdeadbeefdeadbeef")
	metadataJSON := `{
		"state_version": 1
	}`
	spec := &OutputSpec{
		Metadata: json.RawMessage(metadataJSON),
	}
	locks := []*transaction.LockingCondition{}

	output, err := buildStateOutput(owner, spec, locks)

	assert.Error(t, err, "åº”è¯¥è¿”å›é”™è¯¯")
	assert.Nil(t, output, "è¾“å‡ºåº”è¯¥ä¸ºnil")
	assert.Contains(t, err.Error(), "state_id ä¸èƒ½ä¸ºç©º", "é”™è¯¯ä¿¡æ¯åº”è¯¥æ­£ç¡®")
}

// TestBuildStateOutput_InvalidExecutionResultHashLength æµ‹è¯•æ— æ•ˆæ‰§è¡Œç»“æœå“ˆå¸Œé•¿åº¦
func TestBuildStateOutput_InvalidExecutionResultHashLength(t *testing.T) {
	owner := decodeHex("deadbeefdeadbeefdeadbeefdeadbeefdeadbeef")
	stateIDHex := "deadbeefdeadbeefdeadbeefdeadbeefdeadbeef"
	metadataJSON := `{
		"state_id": "` + stateIDHex + `",
		"state_version": 1,
		"execution_result_hash": "deadbeef"
	}`
	spec := &OutputSpec{
		Metadata: json.RawMessage(metadataJSON),
	}
	locks := []*transaction.LockingCondition{}

	output, err := buildStateOutput(owner, spec, locks)

	assert.Error(t, err, "åº”è¯¥è¿”å›é”™è¯¯")
	assert.Nil(t, output, "è¾“å‡ºåº”è¯¥ä¸ºnil")
	assert.Contains(t, err.Error(), "execution_result_hash å¿…é¡»æ˜¯ 32 å­—èŠ‚", "é”™è¯¯ä¿¡æ¯åº”è¯¥æ­£ç¡®")
}

// TestBuildStateOutput_ZeroHashPlaceholder æµ‹è¯•é›¶å“ˆå¸Œå ä½ï¼ˆæ£€æŸ¥å ä½ä»£ç ï¼‰
func TestBuildStateOutput_ZeroHashPlaceholder(t *testing.T) {
	owner := decodeHex("deadbeefdeadbeefdeadbeefdeadbeefdeadbeef")
	executionResultHashHex := "deadbeefdeadbeefdeadbeefdeadbeefdeadbeefdeadbeefdeadbeefdeadbeef"
	stateIDHex := "deadbeefdeadbeefdeadbeefdeadbeefdeadbeef"
	metadataJSON := `{
		"state_id": "` + stateIDHex + `",
		"state_version": 1,
		"execution_result_hash": "` + executionResultHashHex + `"
	}`
	// æ²¡æœ‰æä¾› parent_state_hashï¼Œåº”è¯¥ä½¿ç”¨é›¶å“ˆå¸Œï¼ˆå ä½ï¼‰
	spec := &OutputSpec{
		Metadata: json.RawMessage(metadataJSON),
	}
	locks := []*transaction.LockingCondition{}

	output, err := buildStateOutput(owner, spec, locks)

	assert.NoError(t, err, "åº”è¯¥æˆåŠŸæ„å»ºï¼ˆä½¿ç”¨é›¶å“ˆå¸Œå ä½ï¼‰")
	assert.NotNil(t, output, "åº”è¯¥è¿”å›è¾“å‡ºå¯¹è±¡")
	
	// âš ï¸ æ£€æŸ¥å ä½ä»£ç ï¼šå¦‚æœæ²¡æœ‰æä¾›parent_state_hashï¼Œä½¿ç”¨é›¶å“ˆå¸Œ
	stateOutput, ok := output.OutputContent.(*pb.TxOutput_State)
	if ok {
		zeroHash := make([]byte, 32)
		if len(stateOutput.State.ParentStateHash) == 0 {
			// parent_state_hashä¸ºç©ºï¼Œè¿™æ˜¯æ­£å¸¸çš„ï¼ˆå¯é€‰å­—æ®µï¼‰
		} else if len(stateOutput.State.ParentStateHash) == 32 {
			if string(stateOutput.State.ParentStateHash) == string(zeroHash) {
				t.Logf("âš ï¸ è­¦å‘Šï¼šbuildStateOutput ä½¿ç”¨é›¶å“ˆå¸Œä½œä¸ºå ä½ï¼ˆç¬¬1115è¡Œï¼‰ï¼Œå®é™…åº”è¯¥è¦æ±‚æ˜ç¡®æä¾›")
			}
		}
	}
}

// TestSerializeTx_Success æµ‹è¯•åºåˆ—åŒ–äº¤æ˜“
func TestSerializeTx_Success(t *testing.T) {
	tx := &transaction.Transaction{
		Inputs: []*transaction.TxInput{
			{},
		},
		Outputs: []*transaction.TxOutput{
			{},
		},
	}

	data := serializeTx(tx)

	assert.NotNil(t, data, "åº”è¯¥è¿”å›æ•°æ®")
	assert.Greater(t, len(data), 0, "æ•°æ®åº”è¯¥ä¸ä¸ºç©º")
}

// TestSerializeTx_EmptyTransaction æµ‹è¯•ç©ºäº¤æ˜“åºåˆ—åŒ–
func TestSerializeTx_EmptyTransaction(t *testing.T) {
	tx := &transaction.Transaction{
		Inputs:  []*transaction.TxInput{},
		Outputs: []*transaction.TxOutput{},
	}

	data := serializeTx(tx)

	// ç©ºäº¤æ˜“åºåˆ—åŒ–å¯èƒ½è¿”å›ç©ºå­—èŠ‚æ•°ç»„æˆ–éç©ºå­—èŠ‚æ•°ç»„ï¼ˆå–å†³äºprotobufå®ç°ï¼‰
	assert.NotNil(t, data, "åº”è¯¥è¿”å›æ•°æ®ï¼ˆå³ä½¿æ˜¯ç©ºæ•°ç»„ï¼‰")
}

// TestSerializeTx_NilTransaction æµ‹è¯•niläº¤æ˜“ï¼ˆæ£€æŸ¥é”™è¯¯å¤„ç†ï¼‰
func TestSerializeTx_NilTransaction(t *testing.T) {
	// âš ï¸ æ³¨æ„ï¼šserializeTx ä¸è¿”å›é”™è¯¯ï¼Œåºåˆ—åŒ–å¤±è´¥æ—¶è¿”å›ç©ºå­—èŠ‚æ•°ç»„
	// è¿™å¯èƒ½æ©ç›–äº†é—®é¢˜ï¼Œåº”è¯¥è¿”å›é”™è¯¯
	data := serializeTx(nil)

	if len(data) == 0 {
		t.Logf("âš ï¸ è­¦å‘Šï¼šserializeTx å¯¹niläº¤æ˜“è¿”å›ç©ºå­—èŠ‚æ•°ç»„è€Œä¸æ˜¯é”™è¯¯ï¼Œè¿™å¯èƒ½æ©ç›–äº†é—®é¢˜")
	}
	assert.Empty(t, data, "niläº¤æ˜“åº”è¯¥è¿”å›ç©ºå­—èŠ‚æ•°ç»„ï¼ˆå½“å‰å®ç°ï¼‰")
}

// ============================================================================
// æ£€æŸ¥ç®€åŒ–å®ç°å’Œå ä½ä»£ç 
// ============================================================================

// TestDetectSimplifiedImplementations æ£€æŸ¥ç®€åŒ–å®ç°
func TestDetectSimplifiedImplementations(t *testing.T) {
	// è¿™ä¸ªæµ‹è¯•ç”¨äºè®°å½•å·²çŸ¥çš„ç®€åŒ–å®ç°ï¼Œç¡®ä¿å®ƒä»¬è¢«æ ‡è®°ä¸ºå·²çŸ¥é—®é¢˜
	
	// 1. æ£€æŸ¥ applyPaymaster ä¸­çš„ç®€åŒ–å®ç°ï¼ˆé€‰æ‹©ç¬¬ä¸€ä¸ªUTXOï¼‰
	// å®é™…åº”è¯¥æŒ‰é‡‘é¢é€‰æ‹©ï¼Œä½†å½“å‰å®ç°é€‰æ‹©ç¬¬ä¸€ä¸ª
	t.Logf("âš ï¸ å·²çŸ¥ç®€åŒ–å®ç°ï¼šapplyPaymaster é€‰æ‹©ç¬¬ä¸€ä¸ªUTXOï¼ˆç¬¬576è¡Œï¼‰ï¼Œå®é™…åº”è¯¥æŒ‰é‡‘é¢é€‰æ‹©")
	
	// 2. æ£€æŸ¥ buildResourceOutput ä¸­çš„ç®€åŒ–å®ç°
	// ç¬¬611è¡Œï¼šç®€åŒ–å®ç°ï¼šé€šè¿‡AddCustomOutputæ–¹æ³•æ·»åŠ 
	t.Logf("âš ï¸ å·²çŸ¥ç®€åŒ–å®ç°ï¼šbuildResourceOutput é€šè¿‡AddCustomOutputæ–¹æ³•æ·»åŠ ï¼ˆç¬¬611è¡Œï¼‰")
	
	// 3. æ£€æŸ¥ buildAssetOutput ä¸­çš„ç®€åŒ–å®ç°
	// ç¬¬990è¡Œï¼šåˆçº¦ä»£å¸ï¼ˆç®€åŒ–å®ç°ï¼šä½¿ç”¨é»˜è®¤çš„ FungibleClassIdï¼‰
	t.Logf("âš ï¸ å·²çŸ¥ç®€åŒ–å®ç°ï¼šbuildAssetOutput ä½¿ç”¨é»˜è®¤çš„ FungibleClassIdï¼ˆç¬¬990è¡Œï¼‰")
	
	// 4. æ£€æŸ¥å ä½ä»£ç 
	// ç¬¬1115è¡Œï¼šå¦‚æœæ²¡æœ‰æä¾›ï¼Œä½¿ç”¨é›¶å“ˆå¸Œï¼ˆå ä½ï¼‰
	t.Logf("âš ï¸ å·²çŸ¥å ä½ä»£ç ï¼šä½¿ç”¨é›¶å“ˆå¸Œä½œä¸ºå ä½ï¼ˆç¬¬1115è¡Œï¼‰")
	
	// 5. æ£€æŸ¥ parseAmount çš„è¡Œä¸º
	// ç©ºå­—ç¬¦ä¸²è¿”å›0è€Œä¸æ˜¯é”™è¯¯ï¼Œå¯èƒ½æ©ç›–é—®é¢˜
	t.Logf("âš ï¸ æ½œåœ¨é—®é¢˜ï¼šparseAmount å¯¹ç©ºå­—ç¬¦ä¸²è¿”å›0è€Œä¸æ˜¯é”™è¯¯ï¼Œå¯èƒ½æ©ç›–äº†é—®é¢˜")
	
	// è¿™äº›ç®€åŒ–å®ç°å’Œå ä½ä»£ç åº”è¯¥åœ¨æ–‡æ¡£ä¸­æ˜ç¡®æ ‡è®°ï¼Œå¹¶åœ¨åç»­ç‰ˆæœ¬ä¸­å®Œå–„
}

